--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,46 @@
 version: '3.8'
 
 services:
+  app: 
+    build:
+      context: . 
+      dockerfile: Dockerfile 
+    container_name: wompi_backend_app 
+    ports:
+      - "3000:3000" 
+    environment:
+
+      DB_HOST: postgres 
+      DB_PORT: 5432
+      DB_USERNAME: ${POSTGRES_USER} 
+      DB_PASSWORD: ${POSTGRES_PASSWORD} 
+      DB_DATABASE: ${POSTGRES_DB} 
+      CORS_ORIGIN: ${CORS_ORIGIN} 
+      WOMPI_PUBLIC_KEY: ${WOMPI_PUBLIC_KEY}
+      WOMPI_PRIVATE_KEY: ${WOMPI_PRIVATE_KEY}
+      WOMPI_INTEGRITY_SECRET: ${WOMPI_INTEGRITY_SECRET}
+      NODE_ENV: production
+      PORT: 3000 
+    depends_on:
+      postgres: 
+        condition: service_healthy 
+    restart: unless-stopped
+
   postgres:
     image: postgres:13
-    container_name: wompi_postgres
+    container_name: wompi_postgres 
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: wompi_db
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"] 
       interval: 5s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
 volumes:
   postgres_data:
